refactor layout and styling; remove background from sections, improve loading states with placeholder components, and enhance project date formatting

--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Basic SEO -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> -->
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="author" content="Your Name" />
+    <meta name="description" content="Dev Memoir - A collection of insights, guides, and experiences from a developer's journey." />
+    <meta name="keywords" content="web development, JavaScript, React, coding, programming, Dev Memoir" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dev Memoir" />
+    <meta property="og:description" content="A collection of insights, guides, and experiences from a developer's journey." />
+    <meta property="og:image" content="/images/preview.jpg" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dev Memoir" />
+    <meta name="twitter:description" content="A collection of insights, guides, and experiences from a developer's journey." />
+    <meta name="twitter:image" content="/images/preview.jpg" />
+    <meta name="twitter:site" content="@yourtwitterhandle" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Preload Fonts for Performance -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" as="style" />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" as="style" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+
+    <!-- Title -->
+    <title>Dev Memoir - Developer Insights & Guides</title>
+
+    <!-- Robots (SEO Indexing) -->
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
