add vercel configuration, update homepage URL, and enhance header styling; implement placeholder loaders for better loading feedback in projects and blog pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Your Name" />
+    <meta name="author" content="Nnodimele Udodirim" />
     <meta name="description" content="Dev Memoir - A collection of insights, guides, and experiences from a developer's journey." />
     <meta name="keywords" content="web development, JavaScript, React, coding, programming, Dev Memoir" />
     
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Dev Memoir" />
     <meta property="og:description" content="A collection of insights, guides, and experiences from a developer's journey." />
     <meta property="og:image" content="/images/preview.jpg" />
-    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:url" content="https://devmemoiir.com" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
